# homesim

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/homesim/: agenda.h  and_gate.h  buffer.h  component.h  constants.h  environment.h  inverter.h  nand_gate.h  nor_gate.h  or_gate.h  parser.h  semantic_analyzer.h  simulation.h  wire.h  xnor_gate.h  xor_gate.h
src/: main.cpp
src/analyzer/: semantic_analyzer.cpp  semantic_analyzer_analyze.cpp  semantic_analyzer_analyze_components.cpp  semantic_analyzer_analyze_wires.cpp  semantic_analyzer_extract_simulation.cpp
src/homebrew2021/: alu.h  alu_get_or_create_alu_rom.cpp  alu_rom_a.cpp  alu_rom_b.cpp  alu_rom_flags.cpp  basic_register.cpp  basic_register.h  basic_register_get_data_wire.cpp  bus_register.cpp  bus_register.h  bus_register_get_data_wire.cpp  data_bus.cpp  data_bus.h  data_bus_get_wire.cpp  exceptions.h  main.cpp
src/logic/: agenda.cpp  agenda_add.cpp  agenda_clear.cpp  agenda_current_time.cpp  agenda_next.cpp  agenda_pop.cpp  and_gate.cpp  buffer.cpp  component.cpp  component_factory.cpp  component_factory_create.cpp  component_factory_register_component.cpp  component_get_wire.cpp  component_pin_name.cpp  component_pins.cpp  component_set_pin.cpp  ic7400.cpp  ic7402.cpp  ic7404.cpp  ic7408.cpp  ic74173.cpp  ic74245.cpp  ic7432.cpp  ic7486.cpp  icrom.cpp  inverter.cpp  nand_gate.cpp  nor_gate.cpp  or_gate.cpp  propagate.cpp  simulation.cpp  wire_add_action.cpp  wire_add_connection.cpp  wire_add_state_change_action.cpp  (+15 more)
test/: test_and_gate.cpp  test_buffer.cpp  test_component.cpp  test_component.h  test_component_factory.cpp  test_ic7400.cpp  test_ic7402.cpp  test_ic7404.cpp  test_ic7408.cpp  test_ic74173.cpp  test_ic74245.cpp  test_ic7432.cpp  test_ic7486.cpp  test_icrom.cpp  test_inverter.cpp  test_lexer.cpp  test_nand_gate.cpp  test_nor_gate.cpp  test_or_gate.cpp  test_parser.cpp  test_semantic_analyzer.cpp  test_token_to_description.cpp  test_wire.cpp  test_xnor_gate.cpp  test_xor_gate.cpp
(+29 files in other folders)
